tests/errors/int_01.f90
program main
    integer(8), parameter :: ar1(3) = int([1, 2, 3], [8, 8, 8])
end program